# derive-json-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: example.cpp
include/derivejson/: derivejson.hpp
tests/: derive_json.cpp  testing_models.hpp
